# term3d

./: README.md  points.py  pyproject.toml  shading.py  term3d.py
